--- a/index.html
+++ b/index.html
@@ -136,28 +136,24 @@
 </style>
 
 <style>
-  /* Центрируем всё содержимое, кроме первого h1 */
   body {
     text-align: center;
   }
 
-  /* Отменяем центрирование для h1 (оглавления) */
   h1#гайд-на-установку-сборки-и-скины {
     text-align: left;
     margin-left: auto;
     margin-right: auto;
-    max-width: 800px; /* или ваша желаемая ширина */
+    max-width: 800px; 
   }
 
-  /* Убедимся, что блоки (например, списки, параграфы, изображения) не растягиваются на всю ширину */
   body > *:not(h1#гайд-на-установку-сборки-и-скины) {
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
-    text-align: left; /* опционально: выравнивание текста внутри блоков по левому краю, но общий блок — по центру */
+    text-align: left; 
   }
 
-  /* Особое внимание к изображениям — они тоже должны центрироваться */
   img {
     display: block;
     margin-left: auto;
@@ -169,7 +165,7 @@
         <body class="vscode-body vscode-light">
             <h1 id="гайд-на-установку-сборки-и-скины">Гайд на установку сборки и скины</h1>
 <p><a href="https://drive.google.com/file/d/1nPdvoAVz5qI3-W2pegQD6vxd4snKMbz8/view">Сборка от Алисы</a> <br>
-<a href="https://pixeldrain.com/u/5ezcN74r" >Сборка от вайта (c модами на оптимизацию и qol)</a></p>
+<a href="https://pixeldrain.com/u/hAgutNMC" >Сборка от вайта (c модами на оптимизацию и qol)</a></p>
 <h2 id="elyby"><a href="http://ely.by">ely.by</a></h2> 
 <p><a href="http://ely.by">ely.by</a> - это система скинов независимая от Mojang, проще говоря можно играть со скинами без лицухи.
 Заходим на сайт, регаем аккаунт и ставим скин. <br>
