--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </head>
         <body class="vscode-body vscode-light">
             <h1 id="гайд-на-установку-сборки-и-скины">Гайд на установку сборки и скины</h1>
-<p><a href="https://drive.google.com/file/d/1nPdvoAVz5qI3-W2pegQD6vxd4snKMbz8/view">Сборка от Алисы</a> <br>
+<p><a href="https://drive.google.com/file/d/1wy1BoHYCoeYGlh7QE0CiKiYKqOgv-pEK/view?usp=sharing">Сборка от Алисы</a> <br>
 <a href="https://pixeldrain.com/u/WfnC6G8i" >Сборка от вайта (c модами на оптимизацию и qol)</a></p>
 <h2 id="elyby"><a href="http://ely.by">ely.by</a></h2> 
 <p><a href="http://ely.by">ely.by</a> - это система скинов независимая от Mojang, проще говоря можно играть со скинами без лицухи.
